@@ -62,12 +62,21 @@ class PersistentTestObject
 
     /**
      * Loads the schema from file into the database.
+     *
+     * If autoIncrement is set to false a schema with the id field not set to autoincrement is used.
      */
-    public static function setupTable()
+    public static function setupTable( $autoIncrement = true )
     {
         $db = ezcDbInstance::get();
         // Load schema
-        $schema = ezcDbSchema::createFromFile( 'array', dirname( __FILE__ ) . '/persistent_test_object.dba' );
+        if( $autoIncrement == true )
+        {
+            $schema = ezcDbSchema::createFromFile( 'array', dirname( __FILE__ ) . '/persistent_test_object.dba' );
+        }
+        else
+        {
+            $schema = ezcDbSchema::createFromFile( 'array', dirname( __FILE__ ) . '/persistent_test_object_no_auto_increment.dba' );
+        }
         $schema->writeToDb( $db );
 
         // create sequence if it is a postgres database
