@@ -33,7 +33,7 @@ class ezcPersistentManualGeneratorTest extends ezcTestCase
             $this->markTestSkipped( 'There was no database configured' );
         }
 
-        PersistentTestObject::setupTable();
+        PersistentTestObject::setupTable( false ); /* No auto increment */
         PersistentTestObject::insertCleanData();
 //        PersistentTestObject::saveSqlSchemas();
         $this->session = new ezcPersistentSession( ezcDbInstance::get(),
@@ -84,7 +84,6 @@ class ezcPersistentManualGeneratorTest extends ezcTestCase
         $this->assertEquals( 42, (int)$object2->integer );
         $this->assertEquals( 1.42, (float)$object2->decimal );
         $this->assertEquals( 'Finland has Nokia!', $object2->text );
-
     }
 
     // test save already stored
@@ -101,6 +100,85 @@ class ezcPersistentManualGeneratorTest extends ezcTestCase
             $this->session->save( $object );
         }catch( Exception $e ){ return; }
         $this->fail( "Did not get exception when saving object twice.." );
+    }
+
+    public function testSaveZeroIdentifier()
+    {
+        $object = new ManualGeneratorTest();
+        $object->id = 0;
+        $object->varchar = 'Finland';
+        $object->integer = 42;
+        $object->decimal = 1.42;
+        $object->text = "Finland has Nokia!";
+        $this->session->save( $object );
+        $this->assertEquals( 0, $object->id );
+
+        $object2 = new ManualGeneratorTest();
+        $this->session->loadIntoObject( $object2, 0 );
+        $this->assertEquals( 'Finland', $object2->varchar );
+        $this->assertEquals( 42, (int)$object2->integer );
+        $this->assertEquals( 1.42, (float)$object2->decimal );
+        $this->assertEquals( 'Finland has Nokia!', $object2->text );
+    }
+
+    public function testUpdateZeroIdentifier()
+    {
+        $object = new ManualGeneratorTest();
+        $object->id = 0;
+        $object->varchar = 'Finland';
+        $object->integer = 42;
+        $object->decimal = 1.42;
+        $object->text = "Finland has Nokia!";
+        $this->session->save( $object );
+
+        $object2 = $this->session->loadIfExists( 'PersistentTestObject', 0 );
+        $object2->integer = 99; // gretzky the greatest.
+        $this->session->update( $object2 );
+
+        $object3 = $this->session->loadIfExists( 'PersistentTestObject', 0 );
+        $this->assertEquals( 'Finland', $object3->varchar );
+        $this->assertEquals( 99, (int)$object3->integer );
+        $this->assertEquals( 1.42, (float)$object3->decimal );
+        $this->assertEquals( 'Finland has Nokia!', $object3->text );
+    }
+
+    public function testSaveNegativeIdentifier()
+    {
+        $object = new ManualGeneratorTest();
+        $object->id = -1;
+        $object->varchar = 'Finland';
+        $object->integer = 42;
+        $object->decimal = 1.42;
+        $object->text = "Finland has Nokia!";
+        $this->session->save( $object );
+
+        $this->assertEquals( -1, $object->id );
+        $object2 = $this->session->loadIfExists( 'PersistentTestObject', -1 );
+        $this->assertEquals( 'Finland', $object2->varchar );
+        $this->assertEquals( 42, (int)$object2->integer );
+        $this->assertEquals( 1.42, (float)$object2->decimal );
+        $this->assertEquals( 'Finland has Nokia!', $object2->text );
+    }
+
+    public function testUpdateNegativeIdentifier()
+    {
+        $object = new ManualGeneratorTest();
+        $object->id = -1;
+        $object->varchar = 'Finland';
+        $object->integer = 42;
+        $object->decimal = 1.42;
+        $object->text = "Finland has Nokia!";
+        $this->session->save( $object );
+
+        $object2 = $this->session->loadIfExists( 'PersistentTestObject', -1 );
+        $object2->integer = 99; // gretzky the greatest.
+        $this->session->update( $object2 );
+
+        $object3 = $this->session->loadIfExists( 'PersistentTestObject', -1 );
+        $this->assertEquals( 'Finland', $object3->varchar );
+        $this->assertEquals( 99, (int)$object3->integer );
+        $this->assertEquals( 1.42, (float)$object3->decimal );
+        $this->assertEquals( 'Finland has Nokia!', $object3->text );
     }
 
     // test struct
