@@ -5,7 +5,10 @@
   error messages.
 - Fixed testcase for manual generator giving failure for postgresql on correct
   behaviour (INSERT violating NULL contraint does give an error...)
-
+- Fixed issue #010153: Persistent Object and manual generator (negative and 
+  0 primary keys)
+	
+	
 1.2 - Monday 18 December 2006
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
